--- a/chart1_index.html
+++ b/chart1_index.html
@@ -9,7 +9,7 @@
   
   
   <!-- CSS file -->
-  <link rel="stylesheet" type="text/css" href="css/chart1_styles.css" media="all">
+  <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 </head>
 <body>
 <div id="chart1_plot"></div>
