--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style= "background-color:black;">
+<html style= "background-color:brown;">
 
 <head>
   <!-- Import Vega & Vega-Lite (does not have to be from CDN) -->
@@ -14,11 +14,16 @@
 </head>
 <body>
   <div id="middle">
-    <h1>Data Visualisation 2</h1>
-<h3>Act now before everything is gone. We can't afford to waste any time. The disastrous bushfires of 2018 affected approximately 3 billion creatures and put many more of our priceless biodiversity on the fast track to extinction. Australia has the worst mammal extinction rate of any country in the world. Australian Nature Needs Your Voice Now More Than Ever. The Environment Protection and Biodiversity Conservation (EPBC) Act 1999, Australia's national nature legislation, has numerous flaws and is unable to prevent the widespread destruction of the habitat for threatened species, which is occuring at an unprecedented rate. More than 500 of our natural species, including the greater glider, black-flanked rock-wallaby, regent honeyeater, quick parrot, and Australia's famous koala, are in danger of going extinct completely.</h3>
+    <h1>Animal Extinction</h1>
+    <h5>by Yong Ming</h5>
+
+<h6>What Happened ?</h6>
+<h4>Act now before everything is gone. We can't afford to waste any time. The disastrous bushfires of 2018 affected approximately 3 billion creatures and put many more of our priceless biodiversity on the fast track to extinction. Australia has the worst mammal extinction rate of any country in the world. Australian Nature Needs Your Voice Now More Than Ever. The Environment Protection and Biodiversity Conservation (EPBC) Act 1999, Australia's national nature legislation, has numerous flaws and is unable to prevent the widespread destruction of the habitat for threatened species, which is occuring at an unprecedented rate. More than 500 of our natural species, including the greater glider, black-flanked rock-wallaby, regent honeyeater, quick parrot, and Australia's famous koala, are in danger of going extinct completely.</h4>
 <div id="worldmap_plot"></div>
+<h6>About Land Clearing affecting animal extinct</h6>
 <h3>It is also found that the deforestation had been affecting the habitat of the animals and it actually caused extinction. It is reported that 3,784,400 Hectares of Australia land had been cleared for human activities purposes, how much does your state contributes in this statistics? </h3>
 <div id="chart1_plot"></div>
+<h6>How serious it is ?</h6>
 <h3>Under the EPBC Act new categories have been added for listed threatened species and ecological communities. Critically endangered, conservation dependant and extinct in the wild have been added to the previous categories of endangered, vulnerable and extinct for threatened species and critically endangered and vulnerable have been added to the previous category of endangered for ecological communities. The definition of a species under the EPBC Act includes sub-species and distinct populations that the Minister has determined to be species for the purposes of the Act.</h3>
 <h3>The chart below shows the number of endanger animals falls in their respective category.</h3>
 <div id="chart2_plot"></div>
@@ -34,14 +39,27 @@ h1{
   text-align: center;
   font-size: 72px;
 }
+
+h5{
+  text-align: center;
+}
+
+h6{
+  text-align: left;
+  font-size: 30px;
+  color:orangered;
+}
+
 #middle {
   margin: auto;
   width: 800px; 
   padding: 200px;
   font-family: 'Lexend Deca', sans-serif; 
   color: black;    
-  border-radius: 10pt;
-  background-color: white;
+  border-radius: 100pt;
+  border-color: black;
+  border-width: 2cm;
+  background-color:blanchedalmond;
 }
 </style>
 
